moved data into separate directory

--- a/ANN NARX.ipynb
+++ b/ANN NARX.ipynb
@@ -18,13 +18,17 @@
     "import torch\n",
     "from torch import nn\n",
     "from scipy.io import loadmat\n",
+    "import os\n",
     "from sklearn.gaussian_process import GaussianProcessRegressor\n",
     "from sklearn.gaussian_process.kernels import RBF, WhiteKernel, ExpSineSquared\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.preprocessing import PolynomialFeatures, Normalizer\n",
     "from sklearn.linear_model import LinearRegression\n",
     "\n",
-    "out = loadmat(f'UnbalancedDisk-sim-data.mat') \n",
+    "# out = loadmat(f'UnbalancedDisk-sim-data.mat')\n",
+    "data_dir = 'Data'\n",
+    "data_file = 'UnbalancedDisk-sim-data.mat'\n",
+    "out = loadmat(os.path.join(data_dir, data_file))\n",
     "x = out['ulist'][0,:]\n",
     "y = out['ylist'][0,:] \n",
     "x=x[0:3000]\n",
