--- a/4.2.ipynb
+++ b/4.2.ipynb
@@ -2,11 +2,34 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting git+git://github.com/GerbenBeintema/gym-unbalanced-disk@master\n",
+      "  Cloning git://github.com/GerbenBeintema/gym-unbalanced-disk (to revision master) to c:\\users\\s153325\\appdata\\local\\temp\\pip-req-build-y0v7migc\n",
+      "Requirement already satisfied (use --upgrade to upgrade): gym-unbalanced-disk==0.2.1 from git+git://github.com/GerbenBeintema/gym-unbalanced-disk@master in c:\\users\\s153325\\anaconda3\\lib\\site-packages\n",
+      "Requirement already satisfied: gym in c:\\users\\s153325\\anaconda3\\lib\\site-packages (from gym-unbalanced-disk==0.2.1) (0.18.0)\n",
+      "Requirement already satisfied: numpy in c:\\users\\s153325\\anaconda3\\lib\\site-packages (from gym-unbalanced-disk==0.2.1) (1.19.2)\n",
+      "Requirement already satisfied: scipy in c:\\users\\s153325\\anaconda3\\lib\\site-packages (from gym-unbalanced-disk==0.2.1) (1.5.2)\n",
+      "Requirement already satisfied: cloudpickle<1.7.0,>=1.2.0 in c:\\users\\s153325\\anaconda3\\lib\\site-packages (from gym->gym-unbalanced-disk==0.2.1) (1.6.0)\n",
+      "Requirement already satisfied: Pillow<=7.2.0 in c:\\users\\s153325\\anaconda3\\lib\\site-packages (from gym->gym-unbalanced-disk==0.2.1) (7.2.0)\n",
+      "Requirement already satisfied: pyglet<=1.5.0,>=1.4.0 in c:\\users\\s153325\\anaconda3\\lib\\site-packages (from gym->gym-unbalanced-disk==0.2.1) (1.5.0)\n",
+      "Requirement already satisfied: future in c:\\users\\s153325\\anaconda3\\lib\\site-packages (from pyglet<=1.5.0,>=1.4.0->gym->gym-unbalanced-disk==0.2.1) (0.18.2)\n",
+      "Building wheels for collected packages: gym-unbalanced-disk\n",
+      "  Building wheel for gym-unbalanced-disk (setup.py): started\n",
+      "  Building wheel for gym-unbalanced-disk (setup.py): finished with status 'done'\n",
+      "  Created wheel for gym-unbalanced-disk: filename=gym_unbalanced_disk-0.2.1-py3-none-any.whl size=125363 sha256=6455a75c12ad46cf0ba6266e50432f1987cb01863a591e55856d3c4fadf156c5\n",
+      "  Stored in directory: C:\\Users\\s153325\\AppData\\Local\\Temp\\pip-ephem-wheel-cache-kg9r56dy\\wheels\\b5\\23\\30\\720738515953d9041dc553c0a527be7dfdf452dd25e0c5cd03\n",
+      "Successfully built gym-unbalanced-disk\n"
+     ]
+    }
+   ],
    "source": [
     "!pip install git+git://github.com/GerbenBeintema/gym-unbalanced-disk@master"
    ]
@@ -15,7 +38,19 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'gym'",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mModuleNotFoundError\u001B[0m                       Traceback (most recent call last)",
+      "\u001B[1;32m<ipython-input-2-f0699575b263>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[1;32m----> 1\u001B[1;33m \u001B[1;32mimport\u001B[0m \u001B[0mgym\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mtime\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m      2\u001B[0m \u001B[1;32mimport\u001B[0m \u001B[0mgym_unbalanced_disk\u001B[0m \u001B[1;31m#is required\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      3\u001B[0m \u001B[1;32mimport\u001B[0m \u001B[0mnumpy\u001B[0m \u001B[1;32mas\u001B[0m \u001B[0mnp\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      4\u001B[0m \u001B[0menv\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mgym\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mmake\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;34m'unbalanced-disk-v0'\u001B[0m\u001B[1;33m,\u001B[0m\u001B[0mdt\u001B[0m\u001B[1;33m=\u001B[0m\u001B[1;36m0.05\u001B[0m\u001B[1;33m,\u001B[0m\u001B[0mumax\u001B[0m\u001B[1;33m=\u001B[0m\u001B[1;36m4\u001B[0m\u001B[1;33m)\u001B[0m \u001B[1;31m#if this fails restart the kernel or use gym_unbalanced_disk.UnbalancedDisk\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m      5\u001B[0m \u001B[0menv_sin\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mgym\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mmake\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;34m'unbalanced-disk-sincos-v0'\u001B[0m\u001B[1;33m,\u001B[0m\u001B[0mdt\u001B[0m\u001B[1;33m=\u001B[0m\u001B[1;36m0.05\u001B[0m\u001B[1;33m,\u001B[0m\u001B[0mumax\u001B[0m\u001B[1;33m=\u001B[0m\u001B[1;36m4\u001B[0m\u001B[1;33m)\u001B[0m \u001B[1;31m# angle expressed in sine and cos components. (useful for RL)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;31mModuleNotFoundError\u001B[0m: No module named 'gym'"
+     ]
+    }
+   ],
    "source": [
     "import gym, time\n",
     "import gym_unbalanced_disk #is required\n",
@@ -439,11 +474,11 @@
      "evalue": "unhashable type: 'numpy.ndarray'",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-19-234de9f65d92>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     70\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     71\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'nvec='\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mnvec\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 72\u001b[1;33m     \u001b[0mQmat\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mep_lengths_steps\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mep_lengths\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mQlearn\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0menv\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnsteps\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m400_000\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcallbackfeq\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m5000\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     73\u001b[0m     \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mep_lengths_steps\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mroll_mean\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mep_lengths\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mstart\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mmax_episode_steps\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mlabel\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mstr\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnvec\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     74\u001b[0m \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlegend\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m<ipython-input-19-234de9f65d92>\u001b[0m in \u001b[0;36mQlearn\u001b[1;34m(env, nsteps, callbackfeq, alpha, eps, gamma)\u001b[0m\n\u001b[0;32m     45\u001b[0m             \u001b[0mobs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0menv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mreset\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     46\u001b[0m         \u001b[1;32melse\u001b[0m\u001b[1;33m:\u001b[0m \u001b[1;31m#done by timeout or not done\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 47\u001b[1;33m             \u001b[0mA\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mreward\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mgamma\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mmax\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mQmat\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mobs_new\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0maction_next\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0maction_next\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0menv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0maction_space\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mn\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mQmat\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mobs\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0maction\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     48\u001b[0m             \u001b[0mQmat\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mobs\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0maction\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m+=\u001b[0m \u001b[0malpha\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mA\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     49\u001b[0m             \u001b[0mobs\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mobs_new\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: unhashable type: 'numpy.ndarray'"
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mTypeError\u001B[0m                                 Traceback (most recent call last)",
+      "\u001B[1;32m<ipython-input-19-234de9f65d92>\u001B[0m in \u001B[0;36m<module>\u001B[1;34m\u001B[0m\n\u001B[0;32m     70\u001B[0m \u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     71\u001B[0m     \u001B[0mprint\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;34m'nvec='\u001B[0m\u001B[1;33m,\u001B[0m\u001B[0mnvec\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 72\u001B[1;33m     \u001B[0mQmat\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mep_lengths_steps\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mep_lengths\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mQlearn\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0menv\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mnsteps\u001B[0m\u001B[1;33m=\u001B[0m\u001B[1;36m400_000\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0mcallbackfeq\u001B[0m\u001B[1;33m=\u001B[0m\u001B[1;36m5000\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     73\u001B[0m     \u001B[0mplt\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mplot\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mep_lengths_steps\u001B[0m\u001B[1;33m,\u001B[0m\u001B[0mroll_mean\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mep_lengths\u001B[0m\u001B[1;33m,\u001B[0m\u001B[0mstart\u001B[0m\u001B[1;33m=\u001B[0m\u001B[0mmax_episode_steps\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m,\u001B[0m\u001B[0mlabel\u001B[0m\u001B[1;33m=\u001B[0m\u001B[0mstr\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mnvec\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     74\u001B[0m \u001B[0mplt\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mlegend\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;32m<ipython-input-19-234de9f65d92>\u001B[0m in \u001B[0;36mQlearn\u001B[1;34m(env, nsteps, callbackfeq, alpha, eps, gamma)\u001B[0m\n\u001B[0;32m     45\u001B[0m             \u001B[0mobs\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0menv\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mreset\u001B[0m\u001B[1;33m(\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     46\u001B[0m         \u001B[1;32melse\u001B[0m\u001B[1;33m:\u001B[0m \u001B[1;31m#done by timeout or not done\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[1;32m---> 47\u001B[1;33m             \u001B[0mA\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mreward\u001B[0m \u001B[1;33m+\u001B[0m \u001B[0mgamma\u001B[0m\u001B[1;33m*\u001B[0m\u001B[0mmax\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0mQmat\u001B[0m\u001B[1;33m[\u001B[0m\u001B[0mobs_new\u001B[0m\u001B[1;33m,\u001B[0m \u001B[0maction_next\u001B[0m\u001B[1;33m]\u001B[0m \u001B[1;32mfor\u001B[0m \u001B[0maction_next\u001B[0m \u001B[1;32min\u001B[0m \u001B[0mrange\u001B[0m\u001B[1;33m(\u001B[0m\u001B[0menv\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0maction_space\u001B[0m\u001B[1;33m.\u001B[0m\u001B[0mn\u001B[0m\u001B[1;33m)\u001B[0m\u001B[1;33m)\u001B[0m \u001B[1;33m-\u001B[0m \u001B[0mQmat\u001B[0m\u001B[1;33m[\u001B[0m\u001B[0mobs\u001B[0m\u001B[1;33m,\u001B[0m\u001B[0maction\u001B[0m\u001B[1;33m]\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0m\u001B[0;32m     48\u001B[0m             \u001B[0mQmat\u001B[0m\u001B[1;33m[\u001B[0m\u001B[0mobs\u001B[0m\u001B[1;33m,\u001B[0m\u001B[0maction\u001B[0m\u001B[1;33m]\u001B[0m \u001B[1;33m+=\u001B[0m \u001B[0malpha\u001B[0m\u001B[1;33m*\u001B[0m\u001B[0mA\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n\u001B[0;32m     49\u001B[0m             \u001B[0mobs\u001B[0m \u001B[1;33m=\u001B[0m \u001B[0mobs_new\u001B[0m\u001B[1;33m\u001B[0m\u001B[1;33m\u001B[0m\u001B[0m\n",
+      "\u001B[1;31mTypeError\u001B[0m: unhashable type: 'numpy.ndarray'"
      ]
     }
    ],
